src/main/java/com/example/customerservice/error/CustomerNotFoundException.java
package com.example.customerservice.error;

public class CustomerNotFoundException extends RuntimeException {

	public CustomerNotFoundException(Integer id) {
		super("Customer not found for requested id: " + id);
	}

}